# suzuran-renderer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
Scenes/bathroom/: bathroom_opengl_area.xml
include/glad/: glad.h
shaders/: area_ggx.glsl  area_ggx_geo.glsl  area_ref.glsl  depth_acquire.glsl  diffuse.glsl  gl_ggx.glsl  glass.glsl  glass_geo.glsl  pp_CUDA.glsl  pp_FXAA.glsl
src/: Camera.h  Core.h  Light.h  Model.cpp  Model.h  Postprocess.cu  Postprocess.h  Scene.cpp  Scene.h  SceneParse.cpp  SceneParser.h  Shader.cpp  Shader.h  Texture.h  VariableSceneConfig.h  cudahelperlib.cu  cudahelperlib.h  cutil_inline_runtime.h  ltc.h  main.cpp  neural_main.cpp  suzuran_py.cpp
